--- a/index.html
+++ b/index.html
@@ -4,11 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>Product Preview Card Component - Frontend Mentor Challenge</title>
 </head>
 
 <body>
+    <main class="product">
+        <img src="images/image-product-desktop.jpg" alt="Image of a bottle of Gabrielle Essence Eau de Parfum"
+            class="product__image">
+        <div class="product__info">
+            <p class="product__tag">Perfume</p>
+            <h1 class="product__title">Gabrielle Essence Eau De Parfum</h1>
+            <p class="product__description">A floral, solar and voluptuous interpretation composed by Olivier Polge,
+                Perfumer-Creator for the House of CHANEL.</p>
+            <p class="product__price">$149.99 <span>$169.99</span></p>
+            <button class="product__add">Add to Cart</button>
+        </div>
+    </main>
 
+    <footer class="footer">
+        <p class="footer__github"><a class="footer__link"
+                href="https://github.com/kwaeterinckx/RecipePage_FrontendMentorChallenge" target="_blank"
+                title="View code on GitHub">View code
+                on <i class="fa-brands fa-github"></i></a></p>
+        <p class="footer__info">Challenge by <a class="footer__link" href="https://www.frontendmentor.io/home"
+                target="_blank" title="Frontend Mentor website">Frontend
+                Mentor</a>. Coded by <a class="footer__link" href="https://www.waeterinckx.com" target="_blank"
+                title="Waeterinckx.com">Kévin Waeterinckx.</a>
+        </p>
+    </footer>
 </body>
 
 </html>
