--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/media-queries.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -21,14 +22,14 @@
             <p class="product__description">A floral, solar and voluptuous interpretation composed by Olivier Polge,
                 Perfumer-Creator for the House of CHANEL.</p>
             <p class="product__price">$149.99 <span>$169.99</span></p>
-            <button class="product__add">Add to Cart</button>
+            <button class="product__add"><img src="images/icon-cart.svg">Add to Cart</button>
         </div>
     </main>
 
     <footer class="footer">
         <p class="footer__github"><a class="footer__link"
-                href="https://github.com/kwaeterinckx/RecipePage_FrontendMentorChallenge" target="_blank"
-                title="View code on GitHub">View code
+                href="https://github.com/kwaeterinckx/ProductPreviewCardComponent_FrontendMentorChallenge"
+                target="_blank" title="View code on GitHub">View code
                 on <i class="fa-brands fa-github"></i></a></p>
         <p class="footer__info">Challenge by <a class="footer__link" href="https://www.frontendmentor.io/home"
                 target="_blank" title="Frontend Mentor website">Frontend
